tests/bonsai/error/import_cycle0.bonsai
import tests/bonsai/error/import_cycle1;

func foo() -> i32 {
    return 1;
}
